@@ -17,59 +17,77 @@
 package com.echothree.control.user.accounting.server.command;
 
 import com.echothree.control.user.accounting.common.form.GetTransactionEntityRoleTypeForm;
+import com.echothree.control.user.accounting.common.form.GetTransactionEntityRoleTypeForm;
 import com.echothree.control.user.accounting.common.result.AccountingResultFactory;
 import com.echothree.model.control.accounting.server.control.AccountingControl;
+import com.echothree.model.control.accounting.server.logic.TransactionEntityRoleTypeLogic;
 import com.echothree.model.control.core.common.EventTypes;
+import com.echothree.model.control.party.common.PartyTypes;
+import com.echothree.model.control.security.common.SecurityRoleGroups;
+import com.echothree.model.control.security.common.SecurityRoles;
+import com.echothree.model.data.accounting.server.entity.TransactionEntityRoleType;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
 import com.echothree.util.common.message.ExecutionErrors;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
 import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.server.control.BaseSingleEntityCommand;
+import com.echothree.util.server.control.CommandSecurityDefinition;
+import com.echothree.util.server.control.PartyTypeDefinition;
+import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
 public class GetTransactionEntityRoleTypeCommand
-        extends BaseSimpleCommand<GetTransactionEntityRoleTypeForm> {
-    
+        extends BaseSingleEntityCommand<TransactionEntityRoleType, GetTransactionEntityRoleTypeForm> {
+
+    private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                new FieldDefinition("TransactionTypeName", FieldType.ENTITY_NAME, true, null, null),
-                new FieldDefinition("TransactionEntityRoleTypeName", FieldType.ENTITY_NAME, true, null, null)
-                ));
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
+                new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
+                        new SecurityRoleDefinition(SecurityRoleGroups.TransactionEntityRoleType.name(), SecurityRoles.Review.name())
+                ))
+        ));
+
+        FORM_FIELD_DEFINITIONS = List.of(
+                new FieldDefinition("TransactionTypeName", FieldType.ENTITY_NAME, false, null, null),
+                new FieldDefinition("TransactionEntityRoleTypeName", FieldType.ENTITY_NAME, false, null, null),
+                new FieldDefinition("EntityRef", FieldType.ENTITY_REF, false, null, null),
+                new FieldDefinition("Uuid", FieldType.UUID, false, null, null)
+        );
     }
     
     /** Creates a new instance of GetTransactionEntityRoleTypeCommand */
     public GetTransactionEntityRoleTypeCommand(UserVisitPK userVisitPK, GetTransactionEntityRoleTypeForm form) {
-        super(userVisitPK, form, null, FORM_FIELD_DEFINITIONS, false);
+        super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, false);
     }
-    
+
     @Override
-    protected BaseResult execute() {
+    protected TransactionEntityRoleType getEntity() {
+        var transactionEntityRoleType = TransactionEntityRoleTypeLogic.getInstance().getTransactionEntityRoleTypeByUniversalSpec(this, form);
+
+        if(transactionEntityRoleType != null) {
+            sendEvent(transactionEntityRoleType.getPrimaryKey(), EventTypes.READ, null, null, getPartyPK());
+        }
+
+        return transactionEntityRoleType;
+    }
+
+    @Override
+    protected BaseResult getResult(TransactionEntityRoleType entity) {
         var accountingControl = Session.getModelController(AccountingControl.class);
         var result = AccountingResultFactory.getGetTransactionEntityRoleTypeResult();
-        var transactionTypeName = form.getTransactionTypeName();
-        var transactionType = accountingControl.getTransactionTypeByName(transactionTypeName);
-        
-        if(transactionType != null) {
-            var transactionEntityRoleTypeName = form.getTransactionEntityRoleTypeName();
-            var transactionEntityRoleType = accountingControl.getTransactionEntityRoleTypeByName(transactionType, transactionEntityRoleTypeName);
-            
-            if(transactionEntityRoleType != null) {
-                result.setTransactionEntityRoleType(accountingControl.getTransactionEntityRoleTypeTransfer(getUserVisit(), transactionEntityRoleType));
-                
-                sendEvent(transactionEntityRoleType.getPrimaryKey(), EventTypes.READ, null, null, getPartyPK());
-            } else {
-                addExecutionError(ExecutionErrors.UnknownTransactionEntityRoleTypeName.name(), transactionEntityRoleTypeName);
-            }
-        } else {
-            addExecutionError(ExecutionErrors.UnknownTransactionTypeName.name(), transactionTypeName);
+
+        if(entity != null) {
+            result.setTransactionEntityRoleType(accountingControl.getTransactionEntityRoleTypeTransfer(getUserVisit(), entity));
         }
-        
+
         return result;
     }
     
